--- a/Pruebas_pintureria_01/templates/productos/productos.html
+++ b/Pruebas_pintureria_01/templates/productos/productos.html
@@ -84,6 +84,7 @@
                     <td>{{ producto[4] }}</td>
                     <td>${{ producto[5] }}</td>
                     <td>{{ producto[8] }}</td>
+                    <!-- Acciones -->
                     <td style="display: flex; justify-content: space-between;">
                         <div>
                             <!-- Boton para editar -->
