--- a/Pruebas_pintureria_01/templates/home.html
+++ b/Pruebas_pintureria_01/templates/home.html
@@ -35,7 +35,7 @@
         </a>
     </div>
     <div>
-        <a href="#" style="margin: 10px; padding: auto; text-decoration: none;">
+        <a href="{{ url_for('proveedores') }}" style="margin: 10px; padding: auto; text-decoration: none;">
             <div>
                 <img src="../static/images/ico/truck-solid.svg" alt="productos" style=" width: 40%; padding: 0 0 10px 0;">
                 <h2 style="padding: 0 20px; color: white;">Proveedores</h2>
