--- a/Pruebas_pintureria_01/templates/productos/ranking.html
+++ b/Pruebas_pintureria_01/templates/productos/ranking.html
@@ -16,6 +16,16 @@
         <button type="submit" class="btn btn-primary">Filtrar</button>
     </form>
 
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <!-- Nuevo botón "Resetear" con SweetAlert2 -->
+        <form id="resetForm" action="{{ url_for('reset_ranking') }}" method="post">
+            <button type="button" class="btn btn-danger" onclick="confirmReset()">Resetear</button>
+        </form>
+
+        <!-- Espacio para alinear con la esquina superior derecha -->
+        <div></div>
+    </div>
+
     <div class="table-responsive" style="height: 65vh;">
         <table class="table table-bordered table-hover">
             <thead class="thead-light">
@@ -45,5 +55,27 @@
         </table>
     </div>
 </div>
+
+<!-- Script de SweetAlert2 para confirmar reseteo -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+    function confirmReset() {
+        Swal.fire({
+            title: '¿Estás seguro?',
+            text: 'Esta acción es permanente y se perderán los datos de salida, quedaran en 0',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Sí, resetear',
+            cancelButtonText: 'No, cancelar'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Enviar el formulario al endpoint de reseteo
+                document.getElementById('resetForm').submit();
+            }
+        });
+    }
+</script>
 
 {% endblock %}
