--- a/Pruebas_pintureria_01/templates/home.html
+++ b/Pruebas_pintureria_01/templates/home.html
@@ -19,7 +19,7 @@
         </a>
     </div>
     <div>
-        <a href="#" style="margin: 10px; padding: auto; text-decoration: none;">
+        <a href="{{ url_for('products') }}" style="margin: 10px; padding: auto; text-decoration: none;">
             <div>
                 <img src="../static/images/ico/box-open-solid.svg" alt="productos" style=" width: 40%; padding: 0 0 10px 0;">
                 <h2 style="padding: 0 20px; color: white;">Generar Compra</h2>
