--- a/Pruebas_pintureria_01/templates/productos/productos.html
+++ b/Pruebas_pintureria_01/templates/productos/productos.html
@@ -56,20 +56,20 @@
         </form>
 
         <div class="form-inline descuento-form">
-            <!-- Formulario para aplicar descuento de precios -->
-            <form action="{{ url_for('apply_discount') }}" method="post">
-                <label for="discountPercentage" style="margin-right: 0.5rem!important;">Cambio de precios:</label>
+            <!-- Formulario para aplicar ajuste de precios -->
+            <form action="{{ url_for('apply_discount') }}" method="post" style="display: flex; gap: 0.5rem;">
+                <label for="discountPercentage">Cambio de precios:</label>
                 <input type="number" class="form-control" id="discountPercentage" name="discountPercentage" min="-100" max="100" step="0.01" required>
 
                 <!-- Agregar filtro por tipo -->
-                <select class="form-control" name="tipoFiltro">
+                <!-- <select class="form-control" name="tipoFiltro">
                     <option value="">Filtrar por tipo</option>
                     {% for tipo in tipos %}
                         <option value="{{ tipo }}">{{ tipo }}</option>
                     {% endfor %}
-                </select>
+                </select> -->
 
-                <!-- Boton para aplicar descuento con confirmación -->
+                <!-- Boton para aplicar ajuste con confirmación -->
                 <button type="button" class="btn btn-warning" onclick="confirmApply()">Aplicar</button>
             </form>
         </div>
@@ -79,7 +79,9 @@
             <a class="btn btn-success" href="{{ url_for('create')}}">Producto Nuevo</a>
         </div>
     </div>
+</div>
 
+<div style="display: grid; grid-template-columns: 75% 25%;">
     <!-- Tabla de productos -->
     <div class="table-responsive contenedor_interno">
         <table class="table table-bordered table-hover">
@@ -88,7 +90,7 @@
                     <th>Nombre</th>
                     <th>Marca</th>
                     <th>Tipo</th>
-                    <th>Descripción</th>
+                    <th>Descripcion</th>
                     <th>Stock</th>
                     <th>Precio</th>
                     <th>Acciones</th>
@@ -102,23 +104,29 @@
                             <td>{{ producto[6] }}</td>
                             <td>{{ producto[2] }}</td>
                             <td>{{ producto[3] }}</td>
-                            <td>{{ producto[4] }}</td>
+                            <td>
+                                {% if producto[4] <= producto[7] %}
+                                    <p style="color: #FFC107; font-weight: bold; margin: 0;">{{ producto[4] }}</p>
+                                {% else %}
+                                    {{ producto[4] }}
+                                {% endif %}
+                            </td>
                             <td>${{ producto[5] }}</td>
                             <!-- Acciones -->
                             <td style="display: flex; justify-content: space-between;">
                                 <div>
                                     <!-- Boton para editar -->
-                                    <a class="btn btn-primary btn-sm" href="/edit/{{ producto[0] }}">Editar</a>
+                                    <a class="btn btn-primary btn-sm" href="/edit/{{ producto[0] }}"><img src="../../static/images/ico/pen-solid.svg" alt="Editar" style="height: 20px;"></a>
                                     <!-- Boton para eliminar con confirmación -->
-                                    <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('{{ producto[0] }}')">Eliminar</a>
+                                    <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('{{ producto[0] }}')"><img src="../../static/images/ico/trash-solid.svg" alt="Eliminar" style="height: 20px;"></a>
                                     <!-- Boton para agregar al pedido -->
-                                    <a class="btn btn-success btn-sm" href="/add_to_cart/{{ producto[0] }}">Agregar al Pedido</a>
+                                    <a class="btn btn-success btn-sm" href="/add_to_cart/{{ producto[0] }}"><img src="../../static/images/ico/plus-solid.svg" alt="Agregar al Pedido" style="height: 20px;"></a>
                                 </div>
                                 <div>
-                                    <!-- Verificar cantidad mínima con stock actual -->
-                                    {% if producto[4] <= producto[7] %}
+                                    <!-- Verificar cantidad mínima con stock actual --> 
+                                    <!-- {% if producto[4] <= producto[7] %}                    temporalmente desactivado
                                         <span class="badge badge-warning">¡Stock bajo!</span>
-                                    {% endif %}
+                                    {% endif %} -->
                                 </div>
                             </td>
                         </tr>
@@ -127,7 +135,63 @@
             </tbody>
         </table>
     </div>
-</div>
+    <!-- Orden de venta -->
+    <div>
+        <div style="margin-left: 10px;">
+            <div>
+                <div style="max-height: 40vh; overflow-y: auto;">
+                    <div style="padding: 3% 5%; background-color: beige;">
+                        <!-- Lista de productos en el pedido -->
+                        <ul>
+                            <div style="display: flex; justify-content: space-between;">
+                                <div><h5>Productos:</h5></div>
+                                <div style="width: 25%;"><h5>Cant:</h5></div>
+                            </div>
+                            {% for item in lista_pedido %}
+                                <!-- Mostrar el nombre, cantidad y precio de cada producto en el pedido -->
+                                <div style="display: flex; justify-content: space-between; margin: 2px 0;">
+                                    <div style="display: flex;">
+                                        <h6 style="width: 8em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{ item['nombre'] }}</h6><h6>(x{{ item['cantidad'] }})</h6>
+                                    </div>
+                                    <div style="text-align: right; width: 25%;">
+                                        <div>
+                                            <!-- <h6>${{ item['precio'] * item['cantidad'] }}</h6> -->
+                                            <form action="">
+                                                <input type="hidden" name="productos[]" value="{{ item['id'] }}">
+                                                <input style="width: 100%; text-align: center;" name="cantidades[]" value="{{ item['cantidad'] }}">
+                                                <input type="hidden" name="precios[]" value="{{ item['precio'] }}">
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <li>{{ item['nombre'] }} (x{{ item['cantidad'] }}) - Precio: ${{ item['precio'] }}</li> -->
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div style="margin-top: 10px;">
+                    <!-- Formulario para procesar la compra -->
+                    <form method="post" action="/procesar_compra">
+                        <!-- Campos ocultos para cada producto en el pedido -->
+                        {% for item in pedido %}
+                            <input type="hidden" name="productos[]" value="{{ item['id'] }}">
+                            <input type="hidden" name="cantidades[]" value="{{ item['cantidad'] }}">
+                            <input type="hidden" name="precios[]" value="{{ item['precio'] }}">
+                        {% endfor %}
+                        <div style="text-align: center;">
+                            <!-- Botón para procesar la compra -->
+                            <button type="submit" class="btn btn-success">Procesar Compra</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>    
+
+
+
+
 
 <!-- Script de SweetAlert2 para confirmar eliminación -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -151,17 +215,17 @@ function confirmDelete(productID) {
     });
 }
 
-// Script de SweetAlert2 para confirmar aplicar descuento
+// Script de SweetAlert2 para confirmar aplicar ajuste
 function confirmApply() {
     // Mostrar un cuadro de confirmación
     Swal.fire({
         title: '¿Estás seguro?',
-        text: 'Esta acción cambiará los precios según el descuento ingresado',
+        text: 'Esta acción cambiará los precios según el ajuste ingresado',
         icon: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Sí, aplicar descuento',
+        confirmButtonText: 'Sí, aplicar ajuste',
         cancelButtonText: 'Cancelar'
     }).then((result) => {
         if (result.isConfirmed) {
