--- a/Pruebas_pintureria_01/templates/productos/ranking.html
+++ b/Pruebas_pintureria_01/templates/productos/ranking.html
@@ -5,25 +5,27 @@
     <h2 class="mb-3">Ranking</h2>
 
     <!-- Formulario de filtro por tipo -->
-    <form class="form-inline mb-3">
-        <label for="tipoFiltro" class="mr-2">Filtrar por Tipo:</label>
-        <select id="tipoFiltro" class="form-control mr-2" name="tipo">
-            <option value="">Todos los tipos</option>
-            {% for tipo in tipos %}
-            <option value="{{ tipo }}" {% if tipo_filtro == tipo %}selected{% endif %}>{{ tipo }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit" class="btn btn-primary">Filtrar</button>
-    </form>
-
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <!-- Nuevo botón "Resetear" con SweetAlert2 -->
-        <form id="resetForm" action="{{ url_for('reset_ranking') }}" method="post">
-            <button type="button" class="btn btn-danger" onclick="confirmReset()">Resetear</button>
+    <div style="display: flex; justify-content: space-between;">
+        <form class="form-inline mb-3">
+            <label for="tipoFiltro" class="mr-2">Filtrar por Tipo:</label>
+            <select id="tipoFiltro" class="form-control mr-2" name="tipo">
+                <option value="">Todos los tipos</option>
+                {% for tipo in tipos %}
+                <option value="{{ tipo }}" {% if tipo_filtro == tipo %}selected{% endif %}>{{ tipo }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit" class="btn btn-primary">Filtrar</button>
         </form>
 
-        <!-- Espacio para alinear con la esquina superior derecha -->
-        <div></div>
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <!-- Nuevo botón "Resetear" con SweetAlert2 -->
+            <form id="resetForm" action="{{ url_for('reset_ranking') }}" method="post">
+                <button type="button" class="btn btn-danger" onclick="confirmReset()">Resetear</button>
+            </form>
+
+            <!-- Espacio para alinear con la esquina superior derecha -->
+            <div></div>
+        </div>        
     </div>
 
     <div class="table-responsive" style="height: 65vh;">
