--- a/Pruebas_pintureria_01/templates/proveedores/proveedores.html
+++ b/Pruebas_pintureria_01/templates/proveedores/proveedores.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h2>Proveedores</h2>
     <form class="mb-3" action="/proveedores" method="GET">
-        <div class="input-group">
+        <div class="input-group" style="width: 50%; gap: 10px;">
             <input type="text" class="form-control" placeholder="Buscar por nombre o DNI" name="search">
             <button class="btn btn-outline-secondary" type="submit">Buscar</button>
         </div>
