--- a/Pruebas_pintureria_01/templates/productos/create.html
+++ b/Pruebas_pintureria_01/templates/productos/create.html
@@ -67,6 +67,11 @@
                     <input id="txtMinimo" class="form-control" type="number" name="txtMinimo">
                 </div>
 
+                <!-- Campo para ingresar la salida del producto -->
+                <div class="form-group">
+                    <input type="hidden" id="txtSalida" class="form-control" type="number" name="txtSalida" value=0>
+                </div>
+
                 <!-- Botones para agregar o regresar -->
                 <div class="form-group">
                     <!-- Boton para agregar el producto -->
